; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_propvar.c_LoadOle32Export.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_propvar.c_LoadOle32Export.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Old32Dll = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LoadOle32Export(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @LdrLoadDll(i32* null, i32* null, i32* @Old32Dll, i32* %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @NT_SUCCESS(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @RtlRaiseStatus(i32 %14)
  br label %16

16:                                               ; preds = %13, %2
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @RtlInitAnsiString(i32* %6, i32 %17)
  %19 = load i32*, i32** %3, align 8
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @LdrGetProcedureAddress(i32 %20, i32* %6, i32 0, i32* %7)
  store i32 %21, i32* %5, align 4
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @NT_SUCCESS(i32 %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %28, label %25

25:                                               ; preds = %16
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @RtlRaiseStatus(i32 %26)
  br label %28

28:                                               ; preds = %25, %16
  %29 = load i32, i32* %7, align 4
  ret i32 %29
}

declare dso_local i32 @LdrLoadDll(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @NT_SUCCESS(i32) #1

declare dso_local i32 @RtlRaiseStatus(i32) #1

declare dso_local i32 @RtlInitAnsiString(i32*, i32) #1

declare dso_local i32 @LdrGetProcedureAddress(i32, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
